Bug 689982 - A wrong shading raster
Summary: A wrong shading raster
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC Windows NT
: P3 normal
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-27 09:58 UTC by leonardo
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description leonardo 2008-07-27 09:58:58 UTC
The test file of the bug 689918 renders with a brown rectangle at top of page, 
which doesn't appear with Adobe.
Comment 1 leonardo 2008-07-27 10:06:28 UTC
Well I'm not sure whether the problem is with a shading, but that's very 
likely. It is visible with no banding on ppmraw with default resolution :

..\..\gs-hd\bin\gswin32c.exe -IF:/AFPL/gs-hd/lib;f:\afpl\fonts -dNOPAUSE -
dBATCH -sDEVICE=ppmraw -sOutputFile=cur.ppm decompr-L01-001-K-12345600-
00DSG60k-.pdf

I could minimize the document with removing almost all except the Windows 
logo. 3 characters 'i' near the logo can't remove with Acrobat 8. But it is 
still too big for analyzis. The reduced file appears 3 times longer (36Mb) 
than the original one.

Can't attach the reduced file now due to slow GPRS connection. Will do ASAP.
Comment 2 leonardo 2008-07-27 14:03:37 UTC
A simplified test file is copied to 
casper:/home/support/689982/Bug689982.pdf.zip 
Comment 3 leonardo 2008-07-27 14:11:39 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2008-July/008464.html
Comment 4 leonardo 2008-07-27 14:20:58 UTC
The problem was also visible with no banding and with -dNOTRANSPARENCY.